
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/m4"
        tools:layout_editor_absoluteX="-14dp"
        tools:layout_editor_absoluteY="-57dp" />

    <!-- Summary Strip -->
    <TextView
        android:id="@+id/tvDashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/dashboard_title"
        android:textColor="@color/primaryText"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgImage" />

    <LinearLayout
        android:id="@+id/summaryContainer"
        android:layout_width="408dp"
        android:layout_height="365dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDashboardTitle"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/tvTotalIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_income_rs_0"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="31sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_expenses_rs_0"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="31sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget_rs_0"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="31sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBudgetStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/within_budget"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="31sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNetBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_balance_rs_0"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="31sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="407dp"
        android:layout_height="382dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSetupBudget"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:text="@string/setup_budget"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSetupIncome"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/accent"
            android:text="@string/add_incomes"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAddTransaction"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/accent"
            android:text="@string/expense_transactions"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnHistroy"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/accent"
            android:text="@string/manage_transactions"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCategoryAnalysis"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/accent"
            android:text="@string/category_analysis"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btnBackupRestore"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/accent"
            android:text="@string/backup_restore"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>