<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/nothing"
        android:scaleType="centerCrop"
        android:src="@drawable/m4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/accent"
        android:text="@string/back"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="318dp"
        android:layout_height="85dp"
        android:layout_marginTop="84dp"
        android:text="@string/data_manager"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/backupInfo"
        android:layout_width="416dp"
        android:layout_height="277dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/backup_brief"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="405dp"
        android:layout_height="206dp"
        android:layout_marginTop="104dp"
        android:columnCount="2"
        app:layout_constraintBottom_toBottomOf="@+id/bgImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backupInfo">

        <!-- Export Button -->
        <Button
            android:id="@+id/btnExport"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/accent"
            android:text="@string/export_data"
            android:textColor="@color/primaryText"

            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnImport"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/accent"
            android:text="@string/import_data"
            android:textColor="@color/primaryText"

            android:textSize="25sp"
            android:textStyle="bold" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
