<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/nothing"
        android:scaleType="centerCrop"
        android:src="@drawable/m4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="94dp"
        android:layout_height="62dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/accent"
        android:contentDescription="@string/back"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primaryText"
        android:tint="@color/primaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Heading -->
    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="235dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/add_income"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/imgBackground"
        tools:ignore="TextSizeCheck" />

    <!-- Content Container -->
    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <!-- Display Current Income -->
        <TextView
            android:id="@+id/tvCurrentIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="#EEEEEE"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/current_income"
            android:textColor="@color/warningColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Title for the income -->
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/title_hint"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            android:textColorHint="@color/primaryText"
            android:importantForAutofill="no"
            android:inputType="text" />

        <!-- Amount for the income -->
        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:hint="@string/amount_hint"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            android:textColorHint="@color/primaryText"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <!-- Date Picker for selecting the income date -->
        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:calendarTextColor="@color/primaryText"
            android:layout_marginTop="12dp" />

        <!-- Save button to save income -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/accent"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            android:text="@string/save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
