<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/nothing"
        android:scaleType="centerCrop"
        android:src="@drawable/m4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/accent"
        android:padding="8dp"
        android:text="@string/back"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="300dp"
        android:layout_height="94dp"
        android:layout_marginTop="36dp"
        android:text="@string/set_budget"
        android:textColor="@color/primaryText"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:ignore="TextSizeCheck" />

    <!-- Currency Spinner -->


    <Spinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="154dp"
        android:layout_height="68dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/spinner_border"
        android:entries="@array/currency_options"
        android:gravity="center"
        android:padding="12dp"
        android:popupBackground="@android:color/white"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etBudget"
        android:layout_width="378dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/primaryText"
        android:hint="@string/enter_budget"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCurrency" />

    <Button
        android:id="@+id/btnSaveBudget"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:text="@string/save"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBudget"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/tvBudgetStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@color/warningColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSaveBudget" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="228dp"
        android:layout_height="68dp"
        android:layout_marginTop="304dp"
        android:text="@string/select_currency_type"
        android:textColor="@color/primaryText"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCurrency"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
